RESOLVED FIXED275041
[Cocoa] Attributed string generation may add unexpected underlines
https://bugs.webkit.org/show_bug.cgi?id=275041
Summary [Cocoa] Attributed string generation may add unexpected underlines
Aditya Keerthi
Reported 2024-06-02 20:57:38 PDT
Attachments
Aditya Keerthi
Comment 1 2024-06-02 21:07:38 PDT
EWS
Comment 2 2024-06-03 10:35:21 PDT
Committed 279664@main (5f91eea75bc2): <https://commits.webkit.org/279664@main> Reviewed commits have been landed. Closing PR #29439 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.