[Cocoa] Attributed string generation may add unexpected underlines https://bugs.webkit.org/show_bug.cgi?id=275041 rdar://128204838

Reviewed by Richard Robinson and Wenson Hsieh.

`editingAttributedString` generates attributed strings from document ranges using
`TextIterator`. When a renderer with `TextDecorationLine::Underline` is
encountered, `NSUnderlineStyleAttributeName` is added to the attribute dictionary.
However, the attribute dictionary is created outside of the iterative loop and is
reused. Consequently, encountering a single underline currently applies an underline
style to all subsequent text.

Fix by removing `NSUnderlineStyleAttributeName` from the attribute dictionary when
it is not needed. This matches the approach used for other attributes, such as
`NSForegroundColorAttributeName`.

* Source/WebCore/editing/cocoa/HTMLConverter.mm:
(WebCore::editingAttributedString):

Canonical link: https://commits.webkit.org/279664@main